<?xml version="1.0"?>
<package>
  <name>graph_test</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>graph_map</build_depend>
  <run_depend>graph_map</run_depend>

</package>
