<?xml version="1.0"?>
<package>
  <name>graph_test</name>
  <version>0.0.0</version>
  <description>This package contains programs for testing the graph_map and triplet_graph packages.</description>

  <maintainer email="rokusottervanger@gmail.com">Rokus Ottervanger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>graph_map</build_depend>
  <build_depend>triplet_graph</build_depend>
  <build_depend>geolib2</build_depend>
  <build_depend>tue_config</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>graph_map</run_depend>
  <run_depend>triplet_graph</run_depend>
  <run_depend>geolib2</run_depend>
  <run_depend>tue_config</run_depend>

</package>
